--- a/views/admin/produtos.ejs
+++ b/views/admin/produtos.ejs
@@ -29,7 +29,7 @@
                       <td><%= produto.id %></td>
                       <td><%= produto.nome %></td>
                       <td><%= produto.descricao %></td>
-                      <td>R$ <%= produto.preco %>,00</td>
+                      <td>R$ <%= produto.preco %></td>
                       <td>
                         <a href="/admin/produtos/<%= produto.id %>/editar">Editar</a>
                         <a href="/admin/produtos/<%= produto.id %>/remover">Remover</a>
