--- a/views/admin/visualizar-categoria.ejs
+++ b/views/admin/visualizar-categoria.ejs
@@ -22,7 +22,7 @@
                       <th>ID</th>
                       <th>Nome</th>
                       <th>Descrição</th>
-                      <th>Valor</th>
+                      <th>Preço</th>
                       <th>Ações</th>
                     </tr>
                     <% categoria.produtos.forEach(produto => {%>
@@ -30,7 +30,7 @@
                         <td><%= produto.id %></td>
                         <td><%= produto.nome %></td>
                         <td><%= produto.descricao %></td>
-                        <td><%= produto.valor %></td>
+                        <td><%= produto.preco %></td>
                         <td>
                           <a href="/admin/produtos/<%= produto.id %>/editar">Editar</a>
                         </td>
