--- a/views/produtos.ejs
+++ b/views/produtos.ejs
@@ -21,7 +21,7 @@
                         <div class="info">
                             <h2><%= produto.nome %></h2>
                             <p><%= produto.descricao %></p>
-                            <p>R$ <%= produto.preco %>,00</p>
+                            <p>R$ <%= produto.preco %></p>
                             <a href="#" class="btn btn-primary">Detalhes</a>
                         </div>
                     </article>
