--- a/views/admin/dashboard-admin.ejs
+++ b/views/admin/dashboard-admin.ejs
@@ -17,7 +17,8 @@
                 <h1>Espaço da administração</h1>
                 <h2>Boas vindas, <%= usuario %></h2>
                 <a href="/admin/produtos">Lista de produtos</a><br>
-                <a href="/admin/categorias">Categorias dos produtos</a>
+                <a href="/admin/categorias">Categorias dos produtos</a><br>
+                <a href="/admin/carrinho">Meu Carrinho</a>
             </div>
         </section>
     </main>
