--- a/views/admin/criar-produto.ejs
+++ b/views/admin/criar-produto.ejs
@@ -19,12 +19,12 @@
                 <div class="align-row">
                     <form method="POST" enctype="multipart/form-data">
                         
-                        <!-- <label for="imagemProduto">Selecione uma categoria</label>
+                        <label for="imagemProduto">Selecione uma categoria</label>
                             <select name="categoria_id" id="categoria_id">
-                                <%// categorias.forEach(categoria => {%>
-                                    <option value="<%= //categoria.id %>"><%= //categoria.nome %></option>
-                                    <% //}) %>
-                                </select> -->
+                                <% categorias.forEach(categoria => {%>
+                                    <option value="<%= categoria.id %>"><%= categoria.nome %></option>
+                                    <% }) %>
+                                </select>
                                 
                         <label for="imagemProduto">Envie uma imagem</label>
                         <input type="file" name="imagemProduto">
