--- a/views/cadastrar.ejs
+++ b/views/cadastrar.ejs
@@ -4,72 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Cafexpress</title>
-    <style>
-          .cadastro{
-    background: #5E2423;
-    border: 1px solid #5E2423;
-    margin-top: 10%;
-    width: 29vw;
-    height: 60vh;
-    margin-bottom: 5vh;
-    box-sizing: content-box;
-    box-shadow: 3px 3px 15px grey;
-    border-radius: 20px;
-    margin-left: 35vw;
-    color: #fff;
-    
 
-}
-.cadastro h1{
-    position: relative;
-    left:30%;
-}
-.cadastro input{
-    position: relative;
-    top: 1ch;
-    width: 35ch;
-    height: 3ch;
-    margin-top:2CH;
-    margin-left:15%;
-    text-align: center;
-    border-radius: 10px;
-    border: none;
-}
-.cadastro button{
-    position: relative;
-    width: 25ch;
-    height: 6ch;
-    background: none;
-    border-radius: 20px;
-    border: 2px solid #fff;
-    top: 2ch;
-    margin-top: 2ch;
-    margin-left: 25%;
-    color: #fff;
-    transition: 0.5s;
-}
-.cadastro button:hover{
-    background: #fff;
-    color: #000;
-}
-.contebox{
-    position: relative;
-    top: 2ch;
-}
-.contebox a{
-    position: relative;
-    left: 45%;
-    text-decoration: none;
-    color: #fff;
-}
-.contebox a:hover{
-    color: #000;
-}
-
-
-    </style>
 </head>
 <body>
     <%- include("./partials/header") %>
