--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,6 +244,74 @@ main{
     justify-content: space-evenly;
     box-sizing: content-box;
 }
+/*--------------------cadastro de usuario -----------------------------------*/
+.cadastro{
+    background: #5E2423;
+    border: 1px solid #5E2423;
+    margin-top: 2%;
+    width: 50ch;
+    height: 50ch;
+    margin-bottom: 5vh;
+    box-sizing: content-box;
+    box-shadow: 3px 3px 15px grey;
+    border-radius: 20px;
+    margin-left: 35vw;
+    color: #fff;
+    
+
+}
+.cadastro h1{
+    position: relative;
+    left:30%;
+}
+.cadastro input{
+    position: relative;
+    top: 1ch;
+    width: 35ch;
+    height: 3ch;
+    margin-top:2CH;
+    margin-left:20%;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+}
+.cadastro button{
+    position: relative;
+    width: 25ch;
+    height: 6ch;
+    background: none;
+    border-radius: 20px;
+    border: 2px solid #fff;
+    top: 2ch;
+    margin-top: 2ch;
+    margin-left: 30%;
+    color: #fff;
+    transition: 0.5s;
+}
+.cadastro button:hover{
+    background: #fff;
+    color: #000;
+}
+.contebox{
+    position: relative;
+    top: 2ch;
+}
+.contebox a{
+    position: relative;
+    left: 45%;
+    text-decoration: none;
+    color: #fff;
+}
+.contebox a{
+    position: relative;
+    left: 45%;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.5s;
+}
+.contebox a:hover{
+    color: #000;
+}
 
 .produto{
     width: 96vw;
