--- a/views/cadastrar.ejs
+++ b/views/cadastrar.ejs
@@ -12,15 +12,15 @@
     <%- include("./partials/header") %>
     <main>
         <form class="cadastro" action="" method="post">
-            <h1>Casdastro</h1>
-            <input type="text" name="Nome" placeholder="Nome De Usuário"><br>
-            <input type="email" name="email" placeholder="Explo@dasdasd.com"><br>
+            <h1>Cadastro de cliente</h1>
+            <input type="text" name="nome" placeholder="Nome De Usuário"><br>
+            <input type="email" name="email" placeholder="nome@email.com"><br>
             <input type="password" name="senha" placeholder="Senha"><br>
             <input type="password" name="senhaconfrima" placeholder="Confimar senha"><br>
             <button>Cadastro</button>
             <div class="contebox">
             <hr style="width: 90%; height:1px; border-width:0;color:#5E2423;background-color:#5E2423;">
-                 <a href="">Login</a>
+                 <a href="/login">Login</a>
             </div>
         </form>
     </main>
