--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
                 <div class="loginenviar"><button type="submit">Enviar</button></div>
             </form>
             <hr style="width: 90%; height:1px; border-width:0;color:#5E2423;background-color:#5E2423;">
-            <a href="">Esqueci minha senha</a> | <a href="">Cadastre-se</a>
+            <a href="">Esqueci minha senha</a> | <a href="/cadastro">Cadastre-se</a>
         </div>
     </main>
     <%- include("./partials/footer") %>
