correção bug cadastro

--- a/views/cadastrar.ejs
+++ b/views/cadastrar.ejs
@@ -16,7 +16,7 @@
             <input type="text" name="nome" placeholder="Nome De Usuário"><br>
             <input type="email" name="email" placeholder="nome@email.com"><br>
             <input type="password" name="senha" placeholder="Senha"><br>
-            <input type="password" name="senhaconfrima" placeholder="Confimar senha"><br>
+            <input type="password" name="confirmaSenha" placeholder="Confimar senha"><br>
             <button>Cadastro</button>
             <div class="contebox">
             <hr style="width: 90%; height:1px; border-width:0;color:#5E2423;background-color:#5E2423;">
