adição da moderação

--- a/views/admin/dashboard-admin.ejs
+++ b/views/admin/dashboard-admin.ejs
@@ -18,7 +18,9 @@
                 <h2>Boas vindas, <%= usuario %></h2>
                 <a href="/admin/produtos">Lista de produtos</a><br>
                 <a href="/admin/categorias">Categorias dos produtos</a><br>
-                <a href="/admin/carrinho">Meu Carrinho</a>
+                <a href="/admin/carrinho">Meu Carrinho</a><br>
+                <a href="/admin/moderacao">Área de Moderação</a>
+
             </div>
         </section>
     </main>
