Tratamento de erro

--- a/views/admin/moderacao.ejs
+++ b/views/admin/moderacao.ejs
@@ -29,9 +29,9 @@
                       <td><%= usuario.id %></td>
                       <td><%= usuario.nome %></td>
                       <td><%= usuario.email %></td>
-                      <td>R$ <%= usuario.categoria %></td>
+                      <td><%= usuario.categoria %></td>
                       <td>
-                        <a href="">Editar</a>
+                        <a href="/admin/moderacao/:idUsuario/editar">Editar</a>
                         <a href="">Remover</a>
                       </td>
                     </tr>
