--- a/views/admin/produtos.ejs
+++ b/views/admin/produtos.ejs
@@ -20,6 +20,7 @@
                     <tr>
                       <th>ID</th>
                       <th>Nome</th>
+                      <th>categoria</th>
                       <th>Descricao</th>
                       <th>Preço</th>
                       <th>Ações</th>
@@ -28,6 +29,7 @@
                     <tr>
                       <td><%= produto.id %></td>
                       <td><%= produto.nome %></td>
+                      <td><%= produto.categoria.nome %></td>
                       <td><%= produto.descricao %></td>
                       <td>R$ <%= produto.preco %></td>
                       <td>
