--- a/views/admin/editar-usuario.ejs
+++ b/views/admin/editar-usuario.ejs
@@ -14,18 +14,16 @@
     <main>
         <section class="contato">
             <div class="container">
-                <h1>Editar <%= produto.nome %></h1>
+                <h1>Editar <%= usuario.nome %></h1>
                 <div class="align-row">
                     <form method="POST">
                             
                         <label for="nome">Nome</label>
-                        <input type="text" id="nome" name="nome" value="<%= produto.nome %>" required>
+                        <input type="text" id="nome" name="nome" value="<%= usuario.nome %>" required>
 
-                        <label for="descricao">Descricao</label>
-                        <textarea name="descricao" id="descricao" required><%= produto.descricao %></textarea>
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" value="<%= usuario.email %>" required>
 
-                        <label for="preco">Preço</label>
-                        <input type="number" id="preco" name="preco" value="<%= produto.preco %>" required>
                         <hr/>
                         <button type="submit" class="btn btn-primary">salvar</button>
                     </form>
