--- a/views/admin/dashboard-admin.ejs
+++ b/views/admin/dashboard-admin.ejs
@@ -16,10 +16,12 @@
             <div class="container">
                 <h1>Espaço da administração</h1>
                 <h2>Boas vindas, <%= usuario %></h2>
-                <a href="/admin/produtos">Lista de produtos</a><br>
-                <a href="/admin/categorias">Categorias dos produtos</a><br>
-                <a href="/admin/carrinho">Meu Carrinho</a><br>
-                <a href="/admin/moderacao">Área de Moderação</a>
+                <div class="menu-dashboard">
+                    <a href="/admin/produtos">Lista de produtos</a><br>
+                    <a href="/admin/categorias">Categorias dos produtos</a><br>
+                    <a href="/admin/carrinho">Meu Carrinho</a><br>
+                    <a href="/admin/moderacao">Área de Moderação</a>
+                </div>
 
             </div>
         </section>
