--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,6 @@
 <header>
     <div class = 'cabecalho-l'>
-        <div class="logotop">
-            <img class="topimg" src="/images/cafe-logo-header.jpg" alt="cafexpresso-header">
-        </div>
+        <div class="logotop"></div>
         <div class = 'menutop'>
             <p><a href="../">Home</a></p>
         </div>
@@ -14,9 +12,9 @@
         </div>
     </div>
     <div class="cabecalho-r">
-        <div class = 'menubusca'>
+        <!-- <div class = 'menubusca'>
             <input type="text" placeholder="Busca" name="busca" id="busca">
-            <button type="submit">Enviar</button>
+            <button type="submit">Enviar</button> -->
         </div>
         <div class= 'loginbtn'>
             <% if(sessaoAtiva) { %>
@@ -28,7 +26,7 @@
     </div>
     <div class = 'cabecalho-mini'>
         <div class="logo-mobile"></div>
-        <a href="http://www.pudim.com.br" target="_blank">
+        <div id="menu-mobile"></div>
             <div class="menu-mobile"></div>
         </a>
     </div>
