--- a/views/produtos.ejs
+++ b/views/produtos.ejs
@@ -22,7 +22,7 @@
                             <h2><%= produto.nome %></h2>
                             <p><%= produto.descricao %></p>
                             <p>R$ <%= produto.preco %></p>
-                            <a href="#" class="btn btn-primary">Detalhes</a>
+                            <a href="/<%= produto.id %>" class="btn btn-primary">Detalhes</a>
                         </div>
                     </article>
                 <% }) %>
