--- a/public/css/style.css
+++ b/public/css/style.css
@@ -370,8 +370,8 @@ main{
 }
 
 #addcart:hover{
-    background-color: #FAE5D3;
-    color: #BA0000;
+    background-color: #5E2423;
+    color: #FAE5D3;
 }
 
 .menu-dashboard {
@@ -424,6 +424,14 @@ section.produtos-lista article .thumb {
     height: 250px;
     background-color: #555;
     margin: 0 30px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img{  
+    width: 100%;
+    height: 100%
 }
 
 section.produtos-lista article .info {
@@ -434,6 +442,22 @@ section.produtos-lista article .info {
 
 section.produtos-lista article .info h2 {
     margin-top: 0;
+}
+
+section.produtos-lista article .info a {
+    background-color: #BA0000;
+    margin-top: 10px;
+    padding: 10px;
+    border: 0px;
+    color: #FAE5D3;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 20px;
+    text-decoration: none;
+}
+
+section.produtos-lista article .info a:hover {
+    background-color: #5E2423;
 }
 
 footer{
@@ -478,7 +502,6 @@ footer a:hover{
 }
 
 table {
-    font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
