--- a/views/admin/dashboard-admin.ejs
+++ b/views/admin/dashboard-admin.ejs
@@ -17,7 +17,8 @@
                 <h1>Espaço da administração</h1>
                 <h2>Boas vindas, <%= usuario %></h2>
                 <div class="menu-dashboard">
-                    <a href="/admin/produtos">Lista de produtos</a><br>
+                    <a href="/produtos">Lista de produtos</a><br>
+                    <a href="/admin/produtos">Administração de Produtos</a><br>
                     <a href="/admin/categorias">Categorias dos produtos</a><br>
                     <a href="/admin/carrinho">Meu Carrinho</a><br>
                     <a href="/admin/moderacao">Área de Moderação</a>
