--- a/views/admin/moderacao.ejs
+++ b/views/admin/moderacao.ejs
@@ -29,7 +29,7 @@
                       <td><%= usuario.id %></td>
                       <td><%= usuario.nome %></td>
                       <td><%= usuario.email %></td>
-                      <td>R$ <%= usuario.categoria %></td>
+                      <td><%= usuario.categoria %></td>
                       <td>
                         <a href="/admin/moderacao/<%= usuario.id %>/editar">Editar</a>
                         <a href="/admin/moderacao/<%= usuario.id %>/remover">Remover</a>
