--- a/views/detalheProduto.ejs
+++ b/views/detalheProduto.ejs
@@ -17,21 +17,14 @@
                     <li><h1><%= produto.nome %></h1></li>
                     <li><p><%= produto.descricao %></p></li>
                     <li><h2>R$<%= produto.preco %></h2></li>
-                    <form action="">
-                        <li><label for="quantidade">Quantidade:</label>
-                            <input type="number" name="quantidade" id="quantidade"></li>
-                        <li><button type='submit' onclick="alerta()" id="addcart" >Adicionar ao carrinho</button></li>
-                    </form>
+                    <!-- <li><label for="quantidade">Quantidade:</label>
+                        <input type="number" name="quantidade" id="quantidade"></li> -->
+                    <li><a href="/produtos/<%= produto.id %>/carrinho" id="addcart" >Adicionar ao carrinho</a></li>
+
                 </ul>
             </div>
         </div>
     </main>
     <%- include("./partials/footer") %>
-    <script>
-        function alerta(){
-            alert('necessário fazer login!')
-            window.location.assign('http://localhost:3000/login')
-        }
-    </script>
 </body>
 </html>
