--- a/views/admin/editar-usuario.ejs
+++ b/views/admin/editar-usuario.ejs
@@ -24,6 +24,9 @@
                         <label for="email">E-mail</label>
                         <input type="email" id="email" name="email" value="<%= usuario.email %>" required>
 
+                        <label for="categoria">Categoria</label>
+                        <input type="text" name="categoria" id="categoria" value="<%= usuario.categoria %>" required>
+
                         <hr/>
                         <button type="submit" class="btn btn-primary">salvar</button>
                     </form>
