--- a/views/usuario/dashboard-usuario.ejs
+++ b/views/usuario/dashboard-usuario.ejs
@@ -16,8 +16,10 @@
             <div class="container">
                 <h1>Espaço do Cliente</h1>
                 <h2>Boas vindas, <%= usuario %></h2>
-                <a href="/usuario/produtos">Lista de produtos</a><br>
-                <a href="/usuario/carrinho">Meu Carrinho</a>
+                <div class="menu-dashboard">
+                    <a href="/produtos">Lista de produtos</a><br>
+                    <a href="/usuarios/carrinho">Meu Carrinho</a>
+                </div>
             </div>
         </section>
     </main>
