--- a/views/admin/produtos.ejs
+++ b/views/admin/produtos.ejs
@@ -33,13 +33,12 @@
                       <td>
                         <a href="/admin/produtos/<%= produto.id %>/editar">Editar</a>
                         <a href="/admin/produtos/<%= produto.id %>/remover">Remover</a>
-                        <a href="/admin/produtos/<%= produto.id %>/carrinho" style="text-decoration: none;">⭐</a>
                       </td>
                     </tr>
                     <% }) %>
                   </table>
                 </div>
-                <a href="/admin/produtos/criar">Novo produto</a>
+                <a href="/admin/produtos/criar" id="novo-produto">Novo produto</a>
             </div>
         </section>
     </main>
