--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -10,7 +10,24 @@
 <body>
     <%- include("./partials/header") %>
     <main>
+        <article class="sobre-nos">
         <h1> Sobre nós </h1>
+            <p>Fundada em 2022, a iniciativa Caféxpress nasceu do sonho de jovens apaixonados pela bebida mais conhecida do Brasil, o nosso querido café. A equipe de desenvolvedores formada pelo carioca João Henrique Freire, o mineiro Rafael Resck e o acreano Caio Rodrigues, tão variada como o próprio país, se juntou ao redor da paixão pelo café para trazer o melhor que a nossa querida bebida pode oferecer. Mais tarde, o também carioca André Marins se juntou ao grupo que segue, dia após dia, buscando inspiração em outros modelos de sucesso, nosso objetivo é trazer o melhor e mais original conteúdo para que possamos servir o melhor para vocês, a preços acessíveis e sabor inesquecível.</p>
+
+            <hr>
+        <h1>Nossos Blends</h1>
+            <p>
+            Buscando sempre a excelência, nosso processo de produção do café começa ainda na colheita, com o processo cuidadoso de escolha de grãos, para proporcionar a melhor experiência dos nossos clientes. Para isso, buscamos na combinação entre os cafés Aiacá e Catuaí o melhor equilíbrio de sabor e aroma para o café ideal.
+            Com os grãos escolhidos e a colheita feita, passamos à torra, e é aqui que a mágica começa a acontecer: Enquanto nosso blend suave leva apenas os grãos do blend escolhidos, em uma torra média, nosso blend extra-forte também leva uma pequena dose de grãos robusta, além de uma torra mais forte, deixando o amargor e peso do café tão marcantes e conhecidos.
+            Depois, nossa moagem permite que o café seja feito tanto como Expresso quanto no coador, permitindo toda uma variação de possibilidades para que nosso cliente também participe da criação do melhor café para si.
+            </p>
+
+            <hr>
+        <h1>Nossas Bebidas</h1>
+        <p>
+            Da mesma forma que buscamos os melhores grãos para que nossos clientes possam fazer nossos cafés, também buscamos fazer as melhores bebidas. Buscamos profissionais tão apaixonados como nós, para treinar e fazer as melhores bebidas para que nossos clientes possam aproveitar a melhor experiência Cafexpress possível.
+        </p>
+        </article>
     </main>
     <%- include("./partials/footer") %>
 </body>
