--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,18 +101,50 @@ main{
     margin: auto;
     padding-top: 15px;
 }
-#promo{
-    background-image: url(../images/cafe-bg-hori-cut.jpg);
-    width: 100%;
-    height: 55vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
 
+
+[class^="number-slide"],
+[class*=" number-slide"] {
+  background: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FAE5D3    ;
+  font-weight: 500;
+  width: 95vw;
+  height: 55vh;
+  max-height: 100vh;
+}
+
+.number-slide1 {
+  background-image: url(../images/cafe-bg-hori-cut.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.number-slide2 {
+  background-image: url(../images/cafe-bg-slide-2-cut.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
+.number-slide3 {
+  background-image: url(../images/cafe-bg-slide-3-cut.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.number-slide1,
+.number-slide2,
+.number-slide3,
+ h3{
+    font-size:1.5em;
+    filter: drop-shadow(2px 4px 6px black);
+    width: 90%;
+    text-align: center;
 }
 
 #destaques{
@@ -710,6 +742,7 @@ section.contato h1 {
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        z-index: 1;
     }
 
     .menu-aberto{
@@ -734,8 +767,15 @@ section.contato h1 {
         color: #fae5d3c0;
     }
 
-    #promo{
-        height: 35vh;
+    [class^="number-slide"],
+    [class*=" number-slide"] {
+      height: 40vh;
+    }
+
+    .number-slide1,
+    .number-slide2,
+    .number-slide3 h3{
+        font-size :1.25em;
     }
 
     #destaques{
